--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "react-scripts": "3.2.0",
     "react-router-dom": "^5.1.2",
     "reactjs-localstorage": "1.0.1",
-    "lodash": "4.17.19"
+    "lodash": "4.17.19",
+    "formik": "2.1.5",
+    "@material-ui/core": "4.11.0",
+    "@material-ui/icons": "4.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
